<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_error_content">Something went wrong.</string>
    <string name="all">Wallpapers</string>
    <string name="allow">Allow</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_language">App language</string>
    <string name="app_language_summary">Current language: %1$s</string>
    <string name="app_name">黏土粘土图标包</string>
    <string name="app_not_installed">Couldn’t find required app.</string>
    <string name="app_theme">Appearance</string>
    <string name="app_unlicensed">This app is not licensed</string>
    <string name="app_unlicensed_close">Close</string>
    <string name="app_unlicensed_description">This application is not licensed nor valid. Please download the app from a trusted source.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_to">Apply</string>
    <string name="apply_w_external_app">Set With…</string>
    <string name="applying_applied">Wallpaper applied.</string>
    <string name="applying_preparing">Preparing wallpaper…</string>
    <string name="applying_wallpaper">Applying “%1$s”…</string>
    <string name="applying_wallpaper_def">Applying…</string>
    <string name="apps_installed">Apps already installed.</string>
    <string name="apps_limit_dialog">Select %1$s apps or fewer.</string>
    <string name="apps_limit_dialog_day">You may only send requests every %1$s.</string>
    <string name="apps_limit_dialog_day_extra">You may send a request in %1$s.</string>
    <string name="apps_limit_dialog_day_extra_sec">You may send a request in less than a minute.</string>
    <string name="apps_limit_dialog_more">Select %1$s apps or fewer.</string>
    <string name="assets">Assets</string>
    <string name="author">Author</string>
    <string name="both">Both</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="building_request_dialog">Preparing request…</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="changelog">Changelog</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_collections_title">Show Wallpapers From</string>
    <string name="clear_data_cache">Clear App Data</string>
    <string name="clear_data_cache_summary">Free up %1$s of space.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="collections">Collections</string>
    <string name="collections_placeholder" />
    <string name="colored_navigation_bar">Colored Navigation Bar</string>
    <string name="coming_soon">Coming soon.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copied_to_clipboard">Color copied to clipboard.</string>
    <string name="copy">Copy</string>
    <string name="copyright">License</string>
    <string name="crop_pictures">Scale to Fit</string>
    <string name="crop_pictures_summary">Resize wallpapers to match screen resolution.</string>
    <string name="dark_theme">Dark</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_creators_disclaimer">%1$s is powered by the %2$s dashboard. Listed below are the creators of %2$s. If you have questions concerning %1$s, please contact its designer(s), listed above.</string>
    <string name="data_and_storage">Storage</string>
    <string name="data_error_format">Data is possibly malformed. Contact developer.</string>
    <string name="data_error_network">Please check your internet connection and try again.</string>
    <string name="data_error_network_wifi_only">Please connect to Wi-Fi and try again, or disable this option in Settings.</string>
    <string name="days">Days</string>
    <string name="default_wallpaper" />
    <string name="define_piracychecker" />
    <string name="details">Info</string>
    <string name="dimensions">Dimensions</string>
    <string name="direct_apply_not_supported">%1$s does not support applying icons directly. Please try to apply %2$s manually from the launcher settings.</string>
    <string name="display_full_res_previews">High-Quality Thumbnails</string>
    <string name="display_full_res_previews_summary">This uses more data.</string>
    <string name="donate">Donate</string>
    <string name="donate_error">Something went wrong. Error code: %1$s.</string>
    <string name="donate_success_content">Thank you for your support.</string>
    <string name="donate_success_title">Donation Sent</string>
    <string name="download">Save</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left.</string>
    <string name="download_eta_min">%1$dm %2$ds left.</string>
    <string name="download_eta_sec">%1$ds left.</string>
    <string name="download_location">Wallpapers Saved To</string>
    <string name="download_on_wifi_only">Download Wallpapers on Wi-Fi Only</string>
    <string name="download_on_wifi_only_summary">Disable to use mobile data too.</string>
    <string name="download_starting">Saving…</string>
    <string name="download_successful">Wallpapers saved to “%1$s”.</string>
    <string name="download_successful_short">Wallpaper saved.</string>
    <string name="downloaded_previously">Wallpaper already saved.</string>
    <string name="downloading_wallpaper">Downloading “%1$s”…</string>
    <string name="eduardo_description">UI designer. Defender of negative space.</string>
    <string name="email">modetime@qq.com</string>
    <string name="email_subject">黏土粘土·免费</string>
    <string name="enable_notifications">Allow Notifications</string>
    <string name="error">Error</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="every_x">Every %1$s</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="file_size">Size</string>
    <string name="follow_system_theme">Set by System</string>
    <string name="get">Get</string>
    <string name="go_to_next_wallpaper">Go to next wallpaper</string>
    <string name="go_to_previous_wallpaper">Go to previous wallpaper</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="icons">Icons</string>
    <string name="rate">Rate</string>
    <string name="request">Request</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="templates">Templates</string>
</resources>