<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/first_group" android:orderInCategory="100" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_home" android:id="@id/home" android:orderInCategory="100" android:title="@string/home" />
        <item android:icon="@drawable/ic_icons" android:id="@id/icons" android:orderInCategory="200" android:title="@string/icons" />
        <item android:icon="@drawable/ic_apply" android:id="@id/apply" android:orderInCategory="400" android:title="@string/apply" />
        <item android:icon="@drawable/ic_request" android:id="@id/request" android:orderInCategory="500" android:title="@string/request" />
        <item android:icon="@drawable/ic_widgets" android:id="@id/templates" android:visible="false" android:orderInCategory="600" android:title="@string/templates" />
    </group>
    <group android:id="@id/second_group" android:orderInCategory="200" android:checkableBehavior="none">
        <item android:id="@id/changelog" android:orderInCategory="700" android:title="@string/changelog" />
        <item android:id="@id/donate" android:orderInCategory="800" android:title="@string/donate" />
        <item android:id="@id/help" android:orderInCategory="900" android:title="@string/help" />
        <item android:id="@id/about" android:orderInCategory="1000" android:title="@string/about" />
        <item android:id="@id/settings" android:orderInCategory="1100" android:title="@string/settings" />
    </group>
</menu>