<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:paddingTop="16.0dip" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:id="@id/share_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:icon="@drawable/ic_share" style="@style/Widget.Blueprint.OutlinedButton" />
    <com.google.android.material.button.MaterialButton android:id="@id/rate_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:icon="@drawable/ic_rate" style="@style/Widget.Blueprint.OutlinedButton" />
    <com.google.android.material.button.MaterialButton android:id="@id/donate_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/donate" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:icon="@drawable/ic_donate" style="@style/Widget.Blueprint.OutlinedButton" />
</LinearLayout>