<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:paddingTop="12.0dip" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:textColor="?colorSecondary" android:gravity="center" android:layout_gravity="center" android:id="@id/share_btn" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/share" android:drawablePadding="8.0dip" android:layout_weight="1.0" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:drawableTint="?colorSecondary" app:drawableTopCompat="@drawable/ic_share" style="@style/Widget.Frames.TextButton" />
    <com.google.android.material.button.MaterialButton android:textColor="?colorSecondary" android:gravity="center" android:layout_gravity="center" android:id="@id/rate_btn" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/rate" android:drawablePadding="8.0dip" android:layout_weight="1.0" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:drawableTint="?colorSecondary" app:drawableTopCompat="@drawable/ic_rate" style="@style/Widget.Frames.TextButton" />
    <com.google.android.material.button.MaterialButton android:textColor="?colorSecondary" android:gravity="center" android:layout_gravity="center" android:id="@id/donate_btn" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/donate" android:drawablePadding="8.0dip" android:layout_weight="1.0" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:drawableTint="?colorSecondary" app:drawableTopCompat="@drawable/ic_donate" style="@style/Widget.Frames.TextButton" />
</LinearLayout>